# jb-mesh

./: .gitignore  Makefile  README.md  go.mod  go.sum
cmd/jb-mesh/: init_service.go  init_service_test.go  logs_cmd.go  logs_cmd_test.go  main.go  main_test.go  preflight.go  service_release.go  service_release_test.go  template_cmd.go  template_cmd_test.go
docs/: nats-websocket.md  release-boundary.md
docs/authoring/: preflight.md  service-starter.md
examples/: README.md
examples/calculator/: jumpboot.yaml  main.py
examples/embed/: jumpboot.yaml  main.py
pkg/config/: config.go  config_test.go  manifest.go  manifest_test.go  release_targets.go
pkg/discovery/: discovery.go  discovery_test.go
pkg/events/: events.go  events_test.go
pkg/filestore/: filestore.go  filestore_test.go
pkg/logging/: logging.go  logging_test.go
pkg/logstore/: logstore.go  logstore_test.go  producer.go  producer_test.go  query_test.go
pkg/mesh/: cancel_diag_test.go  cancel_integration_test.go  cancel_test.go  connect.go  connect_test.go  (+6 more)
sdk/python/jb-service/: .gitignore  README.md  pyproject.toml
sdk/python/jb-service/docs/: authoring.md
sdk/python/jb-service/examples/: calculator.py
sdk/python/jb-service/src/jb_service/: __init__.py  call_context.py  cli.py  event_bus.py  events.py  filestore.py  logging.py  mesh_filestore.py  method.py  msgpack_protocol.py  msgpack_service.py  protocol.py  schema.py  service.py  types.py
sdk/python/jb-service/tests/: test_attach_file.py  test_basic.py  test_event_bus.py  test_events.py  test_logging.py  test_mesh_filestore.py
(+32 files in other folders)
